--- a/Sistema/src/styles.css
+++ b/Sistema/src/styles.css
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+/* @import "primeng/resources/themes/lara-light-blue/theme.css"; */
+@import "primeng/resources/themes/bootstrap4-dark-blue/theme.css";
+@import "primeng/resources/primeng.css";
+@import "primeicons/primeicons.css";
+@import 'primeflex/primeflex.css';
+
+.container {
+  max-width: 1200px; /* Defina a largura máxima desejada */
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 1rem;  /* Para um pouco de espaço lateral */
+  padding-right: 1rem; /* Para um pouco de espaço lateral */
+}
